# Sibelia

./: .gitignore  ANNOTATION.md  C-SIBELIA.md  CIRCOS_HELPER.md  INSTALL  INSTALL.md  LICENSE  NEWS.md  OUTPUT  README  README.md  SIBELIA.md  USAGE  USAGE.md  USAGE.md.orig
WABIposter/: SyntenyFinder.tex  beamerthemeLankton.sty
WABIposter/figures/: graph1.dot  graph2.dot  simpleGraph.dot  simpleGraph.txt
examples/: extratiny.fasta
examples/Helicobacter_pylori/: block_coords.txt  blocks.fasta  blocks_coords.txt  coverage_report.txt  d3_blocks_diagram.html  genomes_permutations.txt  note.txt
examples/Staphylococcus/: coverage_report.txt  genomes_permutations.txt
examples/Staphylococcus_aureus/: block_coords.txt  blocks_coords.txt  coverage_report.txt  d3_blocks_diagram.html  genomes_permutations.txt  note.txt
examples/tiny/: block_coords.txt  (+1 more)
ext/: contigprep.sh  fastapl
presentation/: Figure3.odg  Figure4.odg  Figure5.odg  SyntenyBuilder.tex
report/: graph1.dot  graph1.txt  graph2.dot  graph2.txt  report.tex
snpEff/: .annotate.py.swp  README  annotate.py  annotate_me.py  genomes.txt
src/: .cproject  .outputgenerator.cpp.swp  .project  CMakeLists.txt  auxiliary.cpp  auxiliary.h  bareiterator.cpp  bifurcationstorage.cpp  bifurcationstorage.h  blockbuilder.cpp  blockbuilder.h  blockfinder.cpp  blockfinder.h  blockinstance.cpp  blockinstance.h  bulgeremoval.cpp  common.h  csibelia.cpp  csibelia.cpp~  d3.html  debruijngraph.cpp  debruijngraph.h  debruijnindex.cpp  debruijnindex.h  dnasequence.cpp  dnasequence.h  dumb.cpp  edge.cpp  fasta.cpp  fasta.h  fastareader.cpp  fastareader.h  graphalgorithm.cpp  graphalgorithm.h  hashing.cpp  hashing.h  indexedsequence.cpp  indexedsequence.h  indexiterator.cpp  indexiterator.h  (+33 more)
src/annotation/: snpEffAnnotate.py
src/annotation/snpEff/: snpEff.config
src/csibelia/: C-Sibelia.py  align  block10.fasta  block115.fasta  csibelia.py  insertion.txt  variant.txt  variant.vcf
src/csibelia/lib/vcf/: __init__.py  cparse.pyx  model.py  parser.py
src/csibelia/lib/vcf/test/: prof.py  test_vcf.py
src/include/: cstdint
src/include/seqan/: version.h
src/include/seqan/align/: align_generated_forwards.h
src/include/seqan/basic/: basic_generated_forwards.h  basic_testing.h
src/include/seqan/blast/: blast_generated_forwards.h
src/include/seqan/chaining/: chaining_generated_forwards.h
src/include/seqan/consensus/: consensus_generated_forwards.h
src/include/seqan/file/: file_format.h  file_generated_forwards.h
src/include/seqan/find/: find_generated_forwards.h
src/include/seqan/find2/: find2_generated_forwards.h
src/include/seqan/find_motif/: find_motif_generated_forwards.h
src/include/seqan/graph_algorithms/: graph_algorithms_generated_forwards.h
src/include/seqan/graph_align/: graph_align_generated_forwards.h
src/include/seqan/graph_msa/: graph_msa_generated_forwards.h
src/include/seqan/graph_types/: graph_types_generated_forwards.h
src/include/seqan/index/: index_generated_forwards.h  shape_gapped.h
src/include/seqan/map/: map_generated_forwards.h
src/include/seqan/misc/: misc_generated_forwards.h
src/include/seqan/modifier/: modifier_generated_forwards.h
src/include/seqan/pipe/: pipe_generated_forwards.h
src/include/seqan/random/: random_generated_forwards.h
src/include/seqan/refinement/: refinement_generated_forwards.h
src/include/seqan/score/: score_generated_forwards.h
src/include/seqan/seeds/: seeds_generated_forwards.h
src/include/seqan/seeds2/: seeds2_generated_forwards.h
src/include/seqan/sequence/: sequence_generated_forwards.h
src/include/seqan/sequence_journaled/: sequence_journaled_generated_forwards.h
src/include/seqan/statistics/: statistics_generated_forwards.h
src/include/seqan/store/: store_generated_forwards.h
src/lagan/: nucmatrix.txt  supermap.pl
src/lagan/Readmes/: LICENSE  README.mlagan
src/lagan/src/: Makefile  ancseq.cpp  ancseqrest.cpp  cutmfa.cpp  diagmatrix.h  faindex.cpp  fchaos.c  fchaos.h  filebuffer.h  global.c  mempage.c  multial.c  order.c  rechaos.pl  skiplist.c  thrtrie.c  thrtrie.h  util.cpp
src/lagan/src/glocal/: Makefile  default.score  leftinfluence.h  rightinfluence.h  score.cpp  structs.h
src/lagan/src/utils/: Glue.cpp  SafeVector.h  Sequence.h  cextract.c  cstat.c  draft.pl  fa2xfa.c  getbounds.c  getcontigpos.c  mproject.pl  rc.c  scorealign.c  scorecontigs.c
src/lagan/utils/: cmerge2.pl  flipchaos.pl  mextract.pl  msplit.pl  mviz.pl
src/lagan20/: Makefile  anal_gloc.pl  blosum62.txt  blosum62s.txt  lagan.pl  rechaos.pl  slagan.pl  test.score
src/lagan20/Readmes/: README.FIRST  README.chaos  README.lagan  README.shuffle  README.tools
src/lagan20/src/: Utils.pm  anchors.c  diagmatrix.c  filebuffer.c  global.h  lagan2mfa.cpp  makecons.cpp  mempage.h  mlagan.c  multial.c  multial.h  order.c  order.h  prolagan.c  skiplist.h  slagan-mfa.pl  slagan.pl  sortlist.c  supermap.pl  translate.c  translate.h  xmfa2mfa.pl
src/lagan20/src/glocal/: glocal.cpp  glocal.h  io.cpp  io.h  leftinfluence.cpp  rightinfluence.cpp  score.cpp  score.h
src/lagan20/src/utils/: MultiSequence.h  Output.h  bin2bl.c  bin2mf.c  contigorder.c  dotplot.cpp  getbounds.c  getlength.c  getoverlap.c  mf2bin.pl  mpretty.pl  mrunfile.pl  mviz.pl  overlay.c  scorealign.c  seqmerge.c
src/lagan20/utils/: mrun.pl  mrunpairs.pl
src/lib/: kseq.h
src/libdivsufsort-2.0.1/: CMakeLists.txt
src/libdivsufsort-2.0.1/include/: CMakeLists.txt
src/libdivsufsort-2.0.1/lib/: CMakeLists.txt
src/libdivsufsort-2.0.1/pkgconfig/: CMakeLists.txt
src/resources/: circos.conf  circos.image.conf  d3.html  resource.cfg  resourceCompiler.py  variant.vcf
src/test/: unrolledlisttest.cpp  unrolledlisttest.cpp~master  unrolledlisttest.h
src/util/: README.md  hidemappedcontigs.py  sortcontigs.py  sortsequences.py
src/utils/: hidemappedcontigs.py  sortsequences.py
src/variantcalling/: rearrangement.cpp  rearrangement.h  simplerearrangements.cpp  simplerearrangements.h  variant.cpp  variant.h  variantcaller.cpp  variantcaller.h
testingdatasets/: README.md
(+101 files in other folders)
